--- a/Genitive-Possessive/genitive.tex
+++ b/Genitive-Possessive/genitive.tex
@@ -530,7 +530,7 @@
 	
 	\subsection{Inalienable Possessive Genitive (IPG)}
 	
-	Inalienable genitives (IPG) are possessive cases which forms a fixed semantic relationship between the possessor and the  possessee; kinship and body part possessive genitives are considered to be prototypes of IPG \cite[161]{gebregziabher2012alienable}. 
+	Inalienable genitives (IPG) are possessive cases which form a fixed semantic relationship between the possessor and the  possessee. Kinship and body part possessive genitives are considered to be prototypes of IPG \cite[161]{gebregziabher2012alienable}. 
 	
 	\ex.
 	\ag.
@@ -548,7 +548,7 @@
 	
 	Similarly, in (67) the noun \emph{rifeensa} 'hair' is defined in relation to the possessor which happens to be a specific individual. Body parts inherently require to be part of somebody \cite[161]{gebregziabher2012alienable}.
 	
-	In Afaan Oromoo IPG is expressed in the same as APG be it morphological or syntactic as shown below. \\
+	In Afaan Oromoo IPG is expressed the same as APG be it morphological or syntactic as shown below. \\
 	
 	APG
 	
