--- a/OrgFiles/Journal.org
+++ b/OrgFiles/Journal.org
@@ -340,4 +340,50 @@ We are the memories of the birth of the universe and memories of all existence a
 
 That source is Baman. Projecting as Bamand. The individual soul is the interface b/n your universe and the universal conciousness projecting across all universes. It has memory that recicles, as karma, desire and imagination. It is recicling experience. Not only recicling experience but also it is the evolution of experience. Because human nerveous system we are pondering to questions sucha as who am I? Where I came from? Where am I going? Does higher consciousness exist?Does god care about this biological system of species?
 
-Current thinking of evolution is mechanistic random mutations and natual selection. But evolution is not random it is guided by consciousness. 
+Current thinking of evolution is mechanistic random mutations and natual selection. But evolution is not random it is guided by consciousness.
+
+*** 2022-10-30 Sunday
+
+**** 08:12 AM - Journal                                          :journal:
+:LOGBOOK:
+CLOCK: [2022-10-30 Sun 08:12]--[2022-10-30 Sun 09:18] =>  1:06
+:END:
+What is consciousness? Consciousness is a superposition of infinite possibilities.It coexists simultaneously. The way entagnlement and singularity are explained is materialistic. Singularity is space-time that is infinite. Space time curves upon itself in a space zero volume and infinite density.
+
+What is the argument b/n naive realism and non-naive realism? There is no a such a universe it is a human construct. Universe is one long dream in infinite awareness. How do we reconsile the materialistic world view with the consciousness world view? The materialistic view takes human perception, human cognition, human experience as a fundamental truth in describing a reality that is independent of human experience. How can this be soloved if you observe something and there is an entity that is doing the observing. What is doing the observing and what is interpreting the observation. Consciousness or awareness is where observation occur, interpreted and modified consciouness as sensory experience. So ultimately this sensory experience and the interpretaion of sensory experience are projected as the idea of real universe. But we also know that the range of human experience in terms of perception is very limited, it is a narrow band of perceptual activity which we can extend through telscope and microscope. But it still is a perceptual activity. We can also say that no perceptual activity experience Wholeness with bits of sensory perception. But we interprete our sensory experience as whole.
+
+Is it possible to have an observer independent universe? If so what would it looks like? The question is meaningless. Something doing the looking and interpreting the looking as a reality. The cannot be a picture of the universe without having the look of it. So reality is stranger than we can think. We can only interprete our perceptual experiences. We know that our perceptual experiences are inaccurate. They do not describe reality. Physical body is a modified perception happening in your awareness. Infact human bdoy is void. How does sth that is proportionally as void as intergalatic space appears as human bdoy? This is possible only if nothing modifies itself as everything. The universe is a free lunch. It is made of nothing. Yet it appears as everything. Galaxies, starts, planets are all the interpretation of sensations as experience to the instrument we call human brain which is also a modified perception of the same nothingness.
+
+This issue occupies the attention of many scientists and philosophers throught out millenia. But human species have existed only for 200,000 years. Written language 5 or 6 thousand years. But it is very obvious that all these concepts are also experiences in awareness. No concept can be had in the abscence of awareness. These awareness modifies itself into specicific experience. It also human consciouness takes its own experience of perceptual reality which are basically only sensations and iterprets them as this universe. It includes gravity, spacial theory of relativeity, general relativity etc. Ultimate reality is inconcivalbe. The ultimate reality is you. The mistery of reality is unsolvable. Therefore the only solution is surrender to the mistery. Then you rely on you. You are the mistery. This mistery is devine. You surrender to your devine. 
+
+**** 01:13 PM - Journal                                          :journal:
+:LOGBOOK:
+CLOCK: [2022-10-30 Sun 13:13]--[2022-10-30 Sun 13:36] =>  0:23
+:END:
+
+6 steps of manifestation
+
+(1) Certain outcome is intended
+(2) The outcome need to be specific and definite and the person knows what she wants
+(3) Littel or no attention is paid to the pysiological detail processes involve; paying attention inhibits the flow of impulses of intelligence that produce the outcome, slowing down success
+(4) The person expects the outcome and has confidence in the outcome, there is no anxious attachement to the outcome, anxiety prevents the desire, worry and doubt are obstacles to events of success, the power is still there but it returns against itself, dout is a self defeating intention sent to the creative power, which the field of consciousness computes, rejects the first desire,
+(5) Self referring feedback loop involved, in other words, every fulfilled intention teaches you how to fullfill the next intention even better, when the result occurs it confirms the result at a conscious level. It increases confidence and makes success stronger. This changes doubt into certainity. If the outcoem doesn't succeed, it is because of resistence to existence. An abscence of flow.
+(6) At the end of process there is no doubt that the outcome was obtained by definite conscious process that extends beyound the individual to a larger reality. The absolute self fulfills it.
+
+Inner intelligence coordinates.
+
+** 2022-11 November
+
+*** 2022-11-01 Tuesday
+
+**** 03:21 PM - Journal                                          :journal:
+:LOGBOOK:
+CLOCK: [2022-11-01 Tue 15:21]--[2022-11-01 Tue 15:32] =>  0:11
+:END:
+
+5 steps to avoid stress
+(1) Realize that you have an interpretation in a stressful situation, and tell yourself that your interpretation has no patent to be accepted as a truth
+(2) Set aside your mind set, when you feel tense take this as a signal that you are holding on too tightening to your point of view
+(3) Look at things from a new perspective, focus on the feelings in your body and as you do your mind inevitable starts to look at things differently
+(4) Question your interpretation if it is valid
+(5) Focus on process not on outcome, stress always arise when you focs on how things have to turn out, this is a pit fall of thinking that events can be controlled or forced into predictable outcomes. To overcome this you need to tell yourself that you donot know where you are going and you need to enjoy the journey.
