--- a/OrgFiles/Register/Emacskeys.org
+++ b/OrgFiles/Register/Emacskeys.org
@@ -4,7 +4,7 @@ C-x i insert contents into current buffer
 C-x C-c exit emacs
 
 Text Editing
-C-k erases to endo of line. If line is blanc, the line itself is erased.
+C-k erases to endo of line. If line is blank, the line itself is erased.
 C-g aborts a partially typed command
 C-x u undo last change to buffer
 C-w cut marked region
@@ -97,3 +97,29 @@ make -k compile using makefile
 M-x comment-region comments region of code
 M-; comment current ling
 
+Org-Roam
+C-c n l org-roam-buffer toggle
+C-c n f org-roam-node-find
+C-c n i org-roam-node-insert
+
+C-M-i completion at point
+"Y" org-roam-dailies-capture-yesterday
+"T" org-roam-dailies-capture-tomorrow
+
+C-c n d org roam dailies-map
+
+C-c n d n org-roam dailies capture today
+C-c C-c save the entry
+C-c C-k to cancel capture
+
+C-c n d d org-roam-dailies-goto today
+C-c n d y org-capture yesterday
+C-c n d T capture tomorrow
+C-c n d y go to the file for yesterday
+C-c n d to go to the file for tomorrow
+
+C-c n d v org-roam-dailies capture for a specific date
+C-c n d c go to the file for a specific date
+
+C-c n d b go back one existing date file with next note
+C-c n d f go forward one existing date file with previous note
